--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
         <div class="how-it-works__inner wrapper__inner">
           <h2 class="title">Как это работает</h2>
           <div class="how-it-works__middle">
-            <div class="video-placeholder"></div>
+            <div class="video-placeholder"><img src="img/video-placeholder.png"></div>
             <div class="how-it-works__steps">
                     <div class="how-it-works__step">
                       <div class="how-it-works__step-img" style="background-image:url(img/how-it-works__step-0.png)"></div>
